@@ -1,4 +1,9 @@
 JM 9/11/2004
+- removed Protocols, added peersim.config.FastConfig insted. The new feature
+  is that FastConfig is automatic, it reads and stores "linkable" config lines
+  in a transparent fashion to the protocols.
+
+JM 9/11/2004
 - added nextLong(long) to CommonRandom
 
 AM 6/11/2004
